--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.0",
+    "tailwindcss": "^4.1.11",
     "redux": "^5.0.1",
     "sweetalert2": "^11.22.2"
   },
