--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
+    "react-player": "^3.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.0",
     "redux": "^5.0.1",
